Clean up intro-block spacing [Resolves #203]

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -164,10 +164,12 @@ span.arrow
   flex-wrap wrap
 
   .intro-block
+    flex 1 1 40%
+    padding-left 2em
+    padding-right 2em
     display inline-block
     line-height $lhMedium
     margin-bottom 1em
-    width 49%
 
     h3
       span.arrow
